kubernetes/cluster_roles/network-policies/argocd/dex-server.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: argocd-dex-server-network-policy
  namespace: argocd
  annotations:
      argocd.argoproj.io/sync-wave: "0" 
spec:
  order: 80
  selector: app.kubernetes.io/name == "argocd-dex-server"
  types:
    - Ingress
    - Egress
  ingress:
    - action: Allow # exposing dex http/https grPC endpoint
      protocol: TCP
      source:
        selector: app.kubernetes.io/name == "argocd-server"
      destination:
        ports: [5556, 5557]   
    
  egress:
    - action: Allow # Allowing ArgoCD dex to communicate with 3rd party authentication
      protocol: TCP
      destination:
        nets:
        - 0.0.0.0/0
        ports: [443]
