kubernetes/cluster_roles/network-policies/argocd/server.yaml
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: argocd-server-network-policy
  namespace: tigera-operator
spec:
  order: 80
  selector: "app.kubernetes.io/name == 'argocd-server' ||
             app.kubernetes.io/name == 'argocd-server-metrics'"
  types:
    - Ingress
    - Egress
  ingress:
    - action: Allow # grPC + webUI for argocd server
      protocol: TCP
      destination:
        ports: [80, 443]
    - action: Allow # exposing ArgoCD server metrics endpoint
      protocol: TCP
      source: 
        namespaceSelector: kubernetes.io/metadata.name == "prometheus"
        selector: "app.kubernetes.io/instance == 'prometheus-operator' || 
                  app.kubernetes.io/instance == 'prometheus' || 
                  managed-by == 'prometheus-operator'"
      destination:
        ports: [8083]
  egress:
    - action: Allow # allowing argocd server -> argocd repo server for application state
      protocol: TCP
      destination:
        selector: app.kubernetes.io/name == "argocd-repo-server"
        ports: [8081]
    - action: Allow # allowing argocd server -> dex server for 3rd party authentication
      protocol: TCP
      destination:
        selector: app.kubernetes.io/name == "argocd-dex-server"
        ports: [5556, 5557]
    - action: Allow # allowing argocd server -> redis for HA caching
      protocol: TCP
      destination:
        selector: app.kubernetes.io/name == "argocd-redis"
        ports: [6379]
